# hkppm

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
choco/hkppm/: hkppm.nuspec
choco/hkppm/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
src/: project_managers.rs
