[package]
name = "hkppm"
version = "1.0.0"
edition = "2021"
author = "Humanely Kohen"
description = "Humanely Kohen Python Project Manager is a project manager for Python"
build = "build.rs"

[dependencies]
clap = { version = "3.2.8", features = ["derive"]}
rust-ini = "0.18"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }


[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

